--- a/src/components/css/mystoreProduct.css
+++ b/src/components/css/mystoreProduct.css
@@ -7,6 +7,11 @@
     padding: 50px 70px 50px 70px;
 }
 
+img{
+    height:600px; 
+    width:100%;
+}
+
 .dropdown{
     width:80%;
     border: 1px solid  #7c7a7a;
@@ -51,4 +56,24 @@
     font-size: 20px;
     color: #7c7a7a;
     font-weight: 900;
+}
+
+
+@media (max-width:991px){
+    .allSpace{
+        padding: 50px 20px 50px 20px;
+    }
+    img{
+        width:100%;
+        height:300px;
+    }
+    .title{
+        margin-top: 20px;
+    }
+    .title,.origin_price,.price,.subtitle,span,.total{
+        font-size: 28px;
+    }
+    .description{
+        font-size: 10px;
+    }
 }
